navegação entre contatu e index

--- a/contato.html
+++ b/contato.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>meu nome é matheus hodecker <br> tenho 15 anos <br> sou aluno de informatica para internet no ifc <br> email para contato: matheus.hodecker.santos@gmail.com <br> telefone para contato</p>
+    <a href="index.html">principal</a>
 </body>
 </html>
